--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
+        "croustibat/filament-jobs-monitor": "^2.0",
         "filament/filament": "^3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
         "ibrahimbougaoua/filament-sort-order": "^1.1",
