--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "aymanalhattami/filament-slim-scrollbar": "^2.0",
         "barryvdh/laravel-dompdf": "^2.0",
         "croustibat/filament-jobs-monitor": "^2.0",
         "filament/filament": "^3.0-stable",
