--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "aymanalhattami/filament-slim-scrollbar": "^2.0",
         "barryvdh/laravel-dompdf": "^2.0",
+        "bezhansalleh/filament-shield": "^3.0",
         "croustibat/filament-jobs-monitor": "^2.0",
         "filament/filament": "^3.0-stable",
         "filipfonal/filament-log-manager": "^2.0",
