--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "pxlrbt/filament-excel": "^2.1",
         "shuvroroy/filament-spatie-laravel-backup": "^2.0",
         "spatie/laravel-backup": "^8.3",
-        "staudenmeir/belongs-to-through": "^2.5"
+        "staudenmeir/belongs-to-through": "^2.5",
+        "stechstudio/filament-impersonate": "^3.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
